--- a/.env.emulator_local
+++ b/.env.emulator_local
@@ -1,5 +1,5 @@
 PLATFORM_NAME='android'
-DEVICE_NAME='PIXEL_5_API_30'
+DEVICE_NAME='Pixel_4_API_30'
 APP_WAIT_ACTIVITY='org.wikipedia.*'
 REMOTE_URL='http://127.0.0.1:4723'
 APP='app-alpha-universal-release.apk'
